# jml

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lua-format  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt  requirements.txt  t.txt
.github/workflows/: linux.yml  macos.yml  pre-commit.yml  windows.yml
cmake/: mcConan.cmake
example/: demo_Components.lua  jml.lua  layout_grid.lua  simple.lua  zentrale.lua
example/error/: assert.lua  syntax.lua
example/jml/: equalizer.lua  jml.lua  main.lua
example/launcher/: color.lua  content.lua  main.lua  sidebar.lua  theme.lua  thumbnail.lua
example/tests/: juce_BigInteger.lua
modules/: CMakeLists.txt
modules/lua_juce_bindings/: lua_juce_bindings.cpp  lua_juce_bindings.hpp
modules/lua_juce_core/: lua_juce_core.cpp  lua_juce_core.hpp
modules/lua_juce_data_structures/: lua_juce_data_structures.cpp  lua_juce_data_structures.hpp
modules/lua_juce_events/: lua_juce_events.hpp
modules/lua_juce_graphics/: lua_juce_graphics.cpp  lua_juce_graphics.hpp
modules/lua_juce_gui_basics/: lua_juce_gui_basics.cpp  lua_juce_gui_basics.hpp
modules/lua_juce_sol2/: lua_juce_sol2.cpp  lua_juce_sol2.hpp
modules/mc_gui_testing/: mc_gui_testing.cpp  mc_gui_testing.hpp
modules/mc_lua_juce/: mc_lua_juce.cpp  mc_lua_juce.hpp
modules/mc_lua_juce_core/: mc_lua_juce_core.cpp  (+1 more)
scripts/: ast.py  gui_test.py  header.py
src/: LuaJUCE.hpp  Main.cpp  MainComponent.cpp  MainComponent.h  Sol3.hpp
src/tool/: CMakeLists.txt
src/tool/LuaSuculenta/: CodeEditor.cpp  CodeEditor.hpp  CommandIDs.hpp  LuaPreview.cpp  LuaSuculentaColors.hpp  LuaSuculentaLookAndFeel.cpp  LuaSuculentaLookAndFeel.hpp  MainComponent.cpp  MenuBar.hpp
src/tool/LuaSuculenta/Application/: CommandIDs.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  MenuBar.cpp  MenuBar.hpp
src/tool/LuaSuculenta/CodeEditor/: CodeEditor.cpp
src/tool/LuaSuculenta/LookAndFeel/: LuaSuculentaColors.hpp  LuaSuculentaLookAndFeel.cpp
src/tool/LuaSuculenta/Lua/: Juce.cpp
src/tool/LuaSuculenta/Preview/: ComponentTree.hpp  LuaPreview.cpp  LuaPreview.hpp
test/: CMakeLists.txt  juce_BigInteger.lua
tool/: CMakeLists.txt
tool/LuaSuculenta/Application/: Main.cpp  MainComponent.hpp  MenuBar.cpp
tool/LuaSuculenta/LookAndFeel/: LuaSuculentaLookAndFeel.hpp
tool/LuaSuculenta/Preview/: ComponentContainer.hpp  ComponentTree.hpp
tool/jml-cli/: CMakeLists.txt  JmlCommandline.cpp  JmlCommandline.hpp  Main.cpp
tool/jml-cli/Command/: Snapshot.hpp  Test.hpp
tool/jml-designer/: CMakeLists.txt  LookAndFeel.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp
tool/jml-designer/Application/: Application.cpp  Application.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp
tool/jml-designer/Component/: Button.hpp  ComponentTree.cpp  ComponentTree.hpp  PropertyPanel.hpp  TreeView.hpp
tool/jml-designer/Core/: Justification.cpp  Justification.hpp  ValueTree.cpp  ValueTree.hpp
tool/jml-designer/Document/: Document.cpp  Document.hpp  DocumentCanvas.cpp  DocumentCanvas.hpp  DocumentEditor.cpp  DocumentEditor.hpp
tool/jml-designer/Export/: Exporter.hpp  ImageExporter.cpp  ImageExporter.hpp
tool/jml-designer/Layer/: Layer.cpp  Layer.hpp  LayerCanvas.cpp  LayerCanvas.hpp  LayerExportPanel.cpp  LayerExportPanel.hpp  LayerList.cpp  LayerList.hpp  LayerListener.cpp  LayerListener.hpp  LayerPropertyPanel.cpp  LayerPropertyPanel.hpp  LayerSelection.cpp  LayerSelection.hpp  LayerTree.cpp  LayerTree.hpp  LayerTreeItem.cpp  LayerTreeItem.hpp  LayerTreeView.cpp  LayerTreeView.hpp  LayerTreeViewItem.cpp  LayerTreeViewItem.hpp
tool/jml-designer/Layer/Drawable/: DrawableLayer.cpp  DrawableLayer.hpp  DrawableLayerCanvas.cpp  DrawableLayerCanvas.hpp  DrawableLayerTreeItem.cpp  DrawableLayerTreeItem.hpp  DrawableLayerTreeViewItem.cpp  DrawableLayerTreeViewItem.hpp
tool/jml-designer/Layer/Effect/: DropShadow.cpp  DropShadow.hpp  DropShadowLayerEffect.cpp  DropShadowLayerEffect.hpp  GlowEffect.cpp  GlowEffect.hpp  GlowLayerEffect.cpp  GlowLayerEffect.hpp  LayerEffect.cpp  LayerEffect.hpp  LayerEffectList.cpp  LayerEffectList.hpp
tool/jml-designer/Layer/Export/: Exporter.hpp  ImageExporter.cpp  ImageExporter.hpp
tool/jml-designer/Layer/Group/: GroupLayer.cpp  GroupLayer.hpp  GroupLayerCanvas.cpp  GroupLayerCanvas.hpp  GroupLayerTreeItem.cpp  GroupLayerTreeItem.hpp  GroupLayerTreeViewItem.cpp  GroupLayerTreeViewItem.hpp
tool/jml-designer/Layer/Rectangle/: RectangleLayer.cpp  RectangleLayer.hpp  RectangleLayerCanvas.cpp  RectangleLayerCanvas.hpp  RectangleLayerTreeViewItem.cpp  RectangleLayerTreeViewItem.hpp
tool/jml-designer/Layer/Shape/: ShapeLayer.cpp
tool/jml-designer/Layer/Text/: TextLayer.cpp  TextLayer.hpp
tool/jml-designer/Layers/: ShapeLayer.cpp  ShapeLayer.hpp  TextLayer.hpp
tool/jml-designer/Menu/: CommandIDs.hpp  MenuBar.cpp
tool/jml-designer/Property/: ColorPropertyComponent.cpp  ColorPropertyComponent.hpp  FilePropertyComponent.cpp  FilePropertyComponent.hpp  ValuePropertyComponent.cpp  ValuePropertyComponent.hpp
tool/jml-designer/Resources/svg/outline/: README.md
tool/jml-designer/Tool/: SelectionTool.cpp  SelectionTool.hpp  ShapeTool.cpp  ShapeTool.hpp  Tool.cpp  Tool.hpp  ToolBar.cpp  ToolBar.hpp
tool/jml-gui-tester/: CMakeLists.txt
tool/jml-gui-tester/Application/: Main.cpp  MainComponent.cpp  MainComponent.hpp
tool/jml-runner-cli/: CMakeLists.txt  Main.cpp
tool/jml-viewer/: CMakeLists.txt
tool/jml-viewer/Application/: Main.cpp  MainComponent.cpp  MainComponent.hpp
tool/jml-viewer/CodeEditor/: CodeEditor.cpp  CodeEditor.hpp
tool/jml-viewer/LookAndFeel/: JmlViewerColors.hpp  JmlViewerLookAndFeel.cpp  JmlViewerLookAndFeel.hpp
tool/jml-viewer/Lua/: Juce.cpp  Juce.hpp
tool/jml-viewer/Preview/: ComponentTree.hpp  FileChangeListener.cpp  FileChangeListener.hpp  LuaPreview.cpp  LuaPreview.hpp  LuaScriptViewer.cpp  LuaScriptViewer.hpp
tool/jml-viewer/Viewer/: ComponentContainer.cpp  ComponentContainer.hpp  ComponentTree.cpp  ComponentTree.hpp  FileChangeListener.hpp  LuaScriptViewer.cpp  LuaScriptViewer.hpp
(+363 files in other folders)
